Debug the proxy.py. Now you can run the Subscribed topic mode!

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -68,7 +68,7 @@
                ('/setting','setting','Setting Server IP'),
                 ('/upload', 'upload', 'Upload New ROS Package'),
                 ('/images', 'images', 'Manage Existing Images'),
-		('/services','services','Manage Existing Deployment'),
+		('/deployments','services','Manage Existing Deployment'),
 
 
               ] -%}
